Wed Jun 13 18:41:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

          Updated email address in various files

Wed Jun 13 18:38:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors/Plan.cdp:
          Use publication_matched callback to start writing, solves missing
          samples with OpenDDS

Wed Jun 13 18:23:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.cpp:
          With RTI DDS any unkeyed sample gets handle nil, but with OpenDDS
          we get always the same handle for all samples of the same type, but
          not nil. Extended this test to handle both vendors

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender.idl:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.idl:
        * connectors/dds4ccm/performance-tests/Keyed/Sender/Perf_Keyed_Test_Sender.idl:
        * connectors/dds4ccm/performance-tests/Latency/Sender/LatencyTT_Test_Sender.idl:
        * connectors/dds4ccm/performance-tests/Throughput/Sender/Throughput_Sender.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender.idl:
        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender.idl: