@@ -1,3 +1,11 @@
+Thu Jun 14 13:26:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.h:
+        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
+          With RTI DDS any unkeyed sample gets handle nil, but with OpenDDS
+          we get always the same handle for all samples of the same type, but
+          not nil. Extended this test to handle both vendors
+
 Wed Jun 13 18:41:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
           Updated email address in various files
